# hair-spike

./: .dockerignore  .gitignore  Dockerfile  README.md  bake.py  bootstrap.sh  docker-compose.yml  hairedit.py  hairswap.py  make_turntable.sh  model.py  recon_prep.py  recon_run.sh  recon_sfm.py  remask_bake.py
brush-orbit/: Cargo.toml
brush-orbit/src/: main.rs
docs/: 01-product-vision.md  02-architecture.md  03-competitive-landscape.md  04-model-options.md  05-privacy-and-data.md  06-unit-economics.md  07-cost-strategy.md  08-spike-status.md  09-roadmap-and-decisions.md  10-spike1-results.md  11-spike2-generative-tests.md  12-spike2-option2-scope.md  13-runpod-runbook.md  14-production-architecture.md  README.md
